<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:onClick="btn1"/>

        <Button
            android:id="@+id/btn_speed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:onClick="btn2"/>

        <Button
            android:id="@+id/btn_speed3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:onClick="btn3"/>

        <Button
            android:id="@+id/btn_speed4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:onClick="btn4"/>

    </LinearLayout>

    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="history"/>

    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="set"/>

</androidx.constraintlayout.widget.ConstraintLayout>